优化，用户密码加盐加密